syntax = "proto3";

package organizations;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


service Organizations {
    rpc List (ListOrganizationsRequest) returns (ListOrganizationsResponse) {
        option (google.api.http) = {
            get: "/v1/organizations"
        };
    }
    rpc Get (GetOrganizationRequest) returns (Organization) {
        option (google.api.http) = {
            get: "/v1/organizations/{organization_id}"
        };
    }
    rpc Create (CreateOrganizationRequest) returns (Organization) {
        option (google.api.http) = {
            post: "/v1/organizations"
            body: "organization"
        };
    }
    rpc Update (UpdateOrganizationRequest) returns (Organization) {
        option (google.api.http) = {
            put: "/v1/organizations/{organization_id}"
            body: "organization"
        };
    }
    rpc Delete (DeleteOrganizationRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/organizations/{organization_id}"
        };
    }
}

message Organization {
    string id = 1;
    string name = 2;
}

message ListOrganizationsRequest {
    int32 page_size = 1;
    string page_token = 2;
}

message ListOrganizationsResponse {
    repeated Organization organizations = 1;
    string next_page_token = 2;
}

message GetOrganizationRequest {
    string id = 1;
}

message CreateOrganizationRequest {
    Organization organization = 1;
}

message UpdateOrganizationRequest {
    string id = 1;
    Organization organization = 2;
}

message DeleteOrganizationRequest {
    string id = 1;
}
